Revision history for WWW::Scraper::ISBN::Record
===============================================

        - New Maintainer: Barbie.
        - move module into lib directory structure.
        - change file dates changed to meet W3CDTF standards.

0.17    2004-06-04
	    - Removed exporter and perl version stuff at user request.

0.16    2004-30-03
	    - Started using Changes file.
	    - Fixed some documentation.