@@ -4,6 +4,7 @@ Revision history for WWW::Scraper::ISBN::Record
         - New Maintainer: Barbie.
         - move module into lib directory structure.
         - change file dates changed to meet W3CDTF standards.
+        - reworked Makefile.PL for clarity.
 
 0.17    2004-06-04
 	    - Removed exporter and perl version stuff at user request.
